FIX Banner Block background overflow issue

--- a/src/scss/components/blocks.scss
+++ b/src/scss/components/blocks.scss
@@ -15,6 +15,7 @@
 
 .silverstripe__elementalbannerblock__block__bannerblock {
   background-color: #001F2C;
+  overflow: hidden;
 }
 
 .banner-element__image {
